<resources>
    <string name="app_name">EscrimaEurope.com</string>
    <string name="description">Authentic, High Quality, Philippine made, Filipino Martial Arts Training Equipment developed and tested by experienced Eskrimadores </string>
    <string name="items">Rattan and Hardwood Sticks • Wooden and Aluminium Training Swords and Knives • Equipment Bags • Accessories</string>
    <string name="website">escrimaeurope.com</string>
    <string name="emailaddress">service@escrimaeurope.com</string>
    <string name="contactnumber">+49(0)52069979082</string>
</resources>
