<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.escrimaeuropecom.MainActivity">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_400" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_weight="1"
            android:fontFamily="gothic-century-light"
            android:text="@string/description"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/background2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:adjustViewBounds="true"
            android:maxHeight="130dp"
            android:scaleType="center"
            android:src="@drawable/sparring2" />

        <TextView
            android:id="@+id/items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/background2"
            android:fontFamily="gothic-century-light"
            android:paddingBottom="@dimen/padding_header_body_copy"
            android:text="@string/items"
            android:textAlignment="center"
            android:textSize="@dimen/textSize_header_body_copy" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/items"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/items"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/web"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:paddingBottom="@dimen/padding_contact_bottom_top"
                        android:paddingEnd="@dimen/padding_contact_image_right"
                        android:paddingLeft="@dimen/padding_contact_image_left"
                        android:paddingRight="@dimen/padding_contact_image_right"
                        android:paddingStart="@dimen/padding_contact_image_left"
                        android:paddingTop="@dimen/padding_contact_bottom_top"
                        android:src="@drawable/webiconlow" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:paddingBottom="@dimen/padding_contact_bottom_top"
                        android:paddingEnd="@dimen/padding_contact_text_right"
                        android:paddingLeft="@dimen/padding_contact_text_left"
                        android:paddingRight="@dimen/padding_contact_text_right"
                        android:paddingStart="@dimen/padding_contact_text_left"
                        android:paddingTop="@dimen/padding_contact_bottom_top"
                        android:text="@string/website"
                        android:textSize="@dimen/textSize_contact" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/contactnumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/web"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:paddingBottom="@dimen/padding_contact_bottom_top"
                        android:paddingEnd="@dimen/padding_contact_image_right"
                        android:paddingLeft="@dimen/padding_contact_image_left"
                        android:paddingRight="@dimen/padding_contact_image_right"
                        android:paddingStart="@dimen/padding_contact_image_left"
                        android:paddingTop="@dimen/padding_contact_bottom_top"
                        android:src="@drawable/phoneiconlow" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:paddingBottom="@dimen/padding_contact_bottom_top"
                        android:paddingEnd="@dimen/padding_contact_text_right"
                        android:paddingLeft="@dimen/padding_contact_text_left"
                        android:paddingRight="@dimen/padding_contact_text_right"
                        android:paddingStart="@dimen/padding_contact_text_left"
                        android:paddingTop="@dimen/padding_contact_bottom_top"
                        android:text="@string/contactnumber"
                        android:textSize="@dimen/textSize_contact" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:paddingBottom="@dimen/padding_contact_bottom_top"
                        android:paddingEnd="@dimen/padding_contact_image_right"
                        android:paddingLeft="@dimen/padding_contact_image_left"
                        android:paddingRight="@dimen/padding_contact_image_right"
                        android:paddingStart="@dimen/padding_contact_image_left"
                        android:paddingTop="@dimen/padding_contact_bottom_top"
                        android:src="@drawable/emailiconlow" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:paddingBottom="@dimen/padding_contact_bottom_top"
                        android:paddingEnd="@dimen/padding_contact_text_right"
                        android:paddingLeft="@dimen/padding_contact_text_left"
                        android:paddingRight="@dimen/padding_contact_text_right"
                        android:paddingStart="@dimen/padding_contact_text_left"
                        android:paddingTop="@dimen/padding_contact_bottom_top"
                        android:text="@string/emailaddress"
                        android:textSize="@dimen/textSize_contact" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>